изменил параметры zsh