@@ -5,6 +5,6 @@ HISTFILE=~/.histfile
 HISTSIZE=1000
 SAVEHIST=1000 
 
-export EDIOR=vim
+export EDITOR=vim
 export LD_LIBRARY_PATH="/opt/ibm/lotus/notes:/usr/lib32"
-
+export JAVA_OPTS="-Xmx1024M -XX:MaxPermSize=1024m"
